--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Redirect to Etsy...</title>
     <meta http-equiv="refresh" content="2;url=https://imaraartshop.etsy.com" />
     <script>
-      window.location = "https://imaraartshop.etsy.com";
+      window.location = "etsy://shop/imaraartshop";
       setTimeout(function () {
         window.location = "https://imaraartshop.etsy.com";
       }, 100);
